# prototype

./: .gitmodules  setup.sh  setup.sql  setup_db.sh
network/: .clang-format  .gitignore  .lvimrc  CMakeLists.txt  NetworkConfig.h.in  client.cc  master.cc  node.cc  server.cc
network/network/: CMakeLists.txt
network/network/include/: int_merkle_tree.h  merkle_tree.h  network.h  node_conn.h  node_ip.h  postgres.h  route.h  socket.h  util.h
network/network/src/: global.cc  merkle_tree.cc  postgres.cc  socket.cc
network/test/: CMakeLists.txt  network_test.cc
